--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,6 +15,19 @@
     </div>
 </main>
 
+<section>
+    <h1>Posts</h1>
+    
+    <ul>
+        {% for post in posts %}
+        <li><a href="/posts/{{post.id}}">{{post.title}}</a></li>
+        {% endfor %}
+    </ul>
+    <a href="/users/{{user.id}}/posts/new">
+        <button>Add Post</button>
+    </a>
+</section>
+
 <script>
     document.getElementById('delete').addEventListener('click', function(){
         if(confirm('Are you sure you want to delete this url?')){
